syntax = "proto3";

package orders;

option go_package = "github.com/orders-service/proto";

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_CANCELLED = 3;
}

message Order {
  string id = 1;
  string product = 2;
  int64 quantity = 3;
  OrderStatus status = 4;
  string created_at = 5;
}

message CreateOrderRequest {
  string product = 1;
  int64 quantity = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string product = 2;
  int64 quantity = 3;
  OrderStatus status = 4;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
